syntax = "proto3";
package bs.gateway;
option go_package ="/gateway";

enum CMDGateway{
	IDNone						= 0;
	IDPulseReq					= 1;        	//测速请求
	IDPulseRsp					= 2;        	//测速回复
	IDTransferDataReq			= 3; 			//数据转发请求
	IDTransferDataRsp			= 4; 			//数据转发回复
	IDAuthInfo					= 5;        	//认证信息
	IDHelloReq					= 6;        	//握手请求
	IDHelloRsp					= 7;        	//握手回复
}

//测速请求
message	PulseReq{
	uint32 my_speed			=1;
	uint32 speed_data		=2;
	bytes  attached_data	=3;
}

//测速请求
message	PulseRsp{
	uint32	speed_data=1;
	bytes 	attachd_data=2;
	int64 	timestamp = 3;
}

//数据转发请求
message TransferDataReq{
	uint32	dest_apptype		= 1;   		//目标或源apptype
	uint32	dest_appid			= 2;     	//目标或源appid
	uint32	main_cmd_id			= 3;		//主命令
	uint32	sub_cmd_id			= 4;		//次命令
	bytes	data				= 5;		//转发数据
	uint32	client_ip_v4		= 6;		//客户端的ip
	uint64	gate_conn_id		= 7; 		//gate连接id
	uint64	user_id				= 8; 		//用户ID
};

//数据转发请求
message TransferDataRsp{
	uint32 result=1;
	uint32 req_id =6;
};

//连接认证信息
message AuthInfo{
	enum OpType {
		Bind = 0;//userId与connId绑定
		Disconnect = 1;//断开当前connId连接
	}
	uint64 user_id =1;   		//用户id
	uint64 gate_conn_id=2; 		//gate连接id
	uint32 result=3;     		//结果 0成功
	string info=4;       		//描述信息
	OpType op_type=5;       	//操作类型
};

//握手请求
message HelloReq{
   uint32	ad_id			=2;
   string	others			=3;
   uint32	builder_no 		=4;      
   uint32	game_kind 		=5;      
   string	client_version	=6;
   uint32	client_type 	=7;
   string	public_key 		=8;
   string	encrypt_key 	=9;		//加密key
   string	guid 			=10;
}

//握手回复
message HelloRsp{
   enum RspFlag{
      UNKNOWN=0;           //未知
      EncryptInfo=1;       //加密信息   encrypt_key 这是存在的
      AdviceNewGate=2;     //建议去新的gate，这时gate_address 必须有内容
      LoginToken=4;        //登录令牌
   }
   
   uint32 	rsp_flag= 1;			//通知的消息内容
   repeated	string 	gate_address=2;		//当前最新的gate地址
   uint32	login_token=4; 		//登录令牌
   string  public_key = 8;
   string 	encrypt_key = 3;		//加密key

   /*
   =0 表示是最新版本
   =1 表示有新版本,但当前版本还可以用
   =2 表示老版本必须更新了,当前连接会被断开的
   */
   uint32 version_result = 5;

   /*
   如果有新的版本,下载地址(一般用于手机)
   */
   string down_url = 6;

   //如果Req的guid为空，则这里为其创建一个guid
   string guid = 7;
}
